<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.represmash.appdoctor.RegistroFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombre2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/nombre" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/telefono2"
        android:layout_below="@+id/nombre2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="@+id/nombre2"
        android:layout_alignParentEnd="@+id/nombre2"
        android:hint="@string/telefono" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="3"
        android:id="@+id/edad2"
        android:layout_below="@+id/telefono2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/edad" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/edad2"
        android:layout_toRightOf="@+id/edad2"
        android:layout_toEndOf="@+id/edad2"
        android:layout_alignTop="@+id/edad2"
        android:orientation="horizontal"
        android:id="@+id/genero2">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/M"
            android:id="@+id/M2"
            android:layout_marginLeft="30dp"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/F"
            android:id="@+id/F2"
            android:layout_marginLeft="30dp"
            android:checked="false"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caso_de_emergencia"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edad2"
        android:layout_alignRight="@+id/genero2"
        android:layout_alignEnd="@+id/genero2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contacto2"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/genero2"
        android:layout_alignEnd="@+id/genero2"
        android:hint="@string/nombre" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/telefono_contacto2"
        android:layout_below="@+id/contacto2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/contacto2"
        android:layout_alignEnd="@+id/contacto2"
        android:hint="@string/telefono" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registrar_paciente2"
        android:layout_below="@id/telefono_contacto2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="74dp"
        android:layout_alignRight="@+id/telefono_contacto2"
        android:layout_alignEnd="@id/telefono_contacto2"
        android:text="@string/registrar_paciente"
        android:onClick="registrarPaciente2"/>

</RelativeLayout>
