<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.represmash.appdoctor.MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/nombre_paciente"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_graficas"
        android:id="@+id/ver_graficas"
        android:layout_marginTop="84dp"
        android:onClick="verGraficas"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mandar_alerta"
        android:id="@+id/mandar_alerta"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/ver_graficas"
        android:layout_toStartOf="@+id/ver_graficas"
        android:onClick="mandarAlerta"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactar"
        android:id="@+id/contactar"
        android:layout_alignTop="@+id/mandar_alerta"
        android:layout_toRightOf="@+id/nombre_paciente"
        android:layout_toEndOf="@+id/nombre_paciente"
        android:onClick="llamar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/emergencia_contactar_a"
        android:id="@+id/emergencia"
        android:layout_below="@+id/mandar_alerta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/contacto_emergencia"
        android:layout_below="@+id/emergencia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/telefono_emergencia"
        android:layout_below="@+id/contacto_emergencia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>
